--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -19,7 +19,7 @@
 
     <mat-form-field style="display: flex;justify-content: center;text-align: center;margin-top: 1rem;margin-left: auto;margin-right: auto;" appearance="fill">
         <mat-label>Quantity</mat-label>
-        <input matInput [(ngModel)]="name">
+        <input matInput [(ngModel)]="quantity">
         <!-- <button mat-icon-button matSuffix [attr.aria-label]="'Name'"><mat-icon>perm_identity</mat-icon></button> -->
     </mat-form-field>
 
