--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,4 +1,4 @@
-<div style="width: 100%;height: 500px;">
+<div style="width: 100%;height: 650px;">
     <div style="margin-top: 1rem;margin-bottom: 3rem;">
         <span>Hi {{user}}, here you can add a crypto you bought.</span>
         <br>
@@ -23,6 +23,12 @@
         <!-- <button mat-icon-button matSuffix [attr.aria-label]="'Name'"><mat-icon>perm_identity</mat-icon></button> -->
     </mat-form-field>
 
+    <mat-form-field style="display: flex;justify-content: center;text-align: center;margin-top: 1rem;margin-left: auto;margin-right: auto;" appearance="fill">
+        <mat-label>Price when you bought it.</mat-label>
+        <input matInput [(ngModel)]="starting_price">
+        <!-- <button mat-icon-button matSuffix [attr.aria-label]="'Name'"><mat-icon>perm_identity</mat-icon></button> -->
+    </mat-form-field>
+
     <mat-form-field style="display: block;margin-left: auto;margin-right: auto;margin-top: 1rem;height: 50px;width: 50%;" appearance="fill">
         <mat-label>Scegli una data entro cui consegnare</mat-label>
         <input matInput [matDatepicker]="picker" [(ngModel)]="date">
@@ -31,7 +37,7 @@
     </mat-form-field>
 
     <span style="margin-top: 3rem;display: flex;justify-content: center;text-align: center;margin-left: auto;margin-right: auto;">
-        <button style="background-color: green;color: white;" (click)="addCrypto()" mat-raised-button>ADD!</button>
+        <button [mat-dialog-close]="true" style="background-color: green;color: white;" (click)="addCrypto()" mat-raised-button>ADD!</button>
     </span>
 
 </div>
