--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div>
-    <table style="width: 90%;margin-left: auto;margin-right: auto;background-color: rgba(247, 247, 78, 0.103);" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <table style="width: 90%;margin-left: auto;margin-right: auto;background-color: rgba(247, 247, 78, 0.103);" mat-table [dataSource]="dataToDisplay" class="mat-elevation-z8">
         
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> Name </th>
