--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -65,6 +65,14 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
+    <div style="display: flex;justify-content: center;text-align: center;margin-top: 1rem;" *ngIf="dataToDisplay.length==0 && showLoading" class="lds-circle"><div></div></div>
+
+    <mat-card *ngIf="showEmptyMsg" style="display: flex;justify-content: center;text-align: center;margin-top: 2rem;margin-left: auto;margin-right: auto;width: 30%;background-color: rgba(255, 255, 255, 0.185);">
+        <mat-card-content>
+            <span>You have no cryptovalues registered yet.</span>
+        </mat-card-content>
+    </mat-card>
+
     <span style="margin-top: 3rem;display: flex;justify-content: center;text-align: center;margin-left: auto;margin-right: auto;">
         <button (click)="addCrypto()" style="margin-top: 3rem;display: flex;justify-content: center;text-align: center;margin-left: auto;margin-right: auto;background-color: green;" mat-mini-fab color="accent" aria-label="Example icon button with a plus one icon">
             <mat-icon>plus_one</mat-icon>
