--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,11 +1,12 @@
 
 <mat-grid-list style="margin-left: auto;margin-right: auto;width: 90%;margin-top: 10rem;" cols="4" rowHeight="200px">
-    <mat-grid-tile style="border: solid 3px #000;"
+    <mat-grid-tile class="background" style="border: solid 3px #000;" 
         *ngFor="let tile of tiles"
         [colspan]="tile.cols"
         [rowspan]="tile.rows"
         [style.background]="tile.color">
         <!-- {{tile.text}} -->
+        <mat-icon style="color:rgb(0, 0, 223);">{{tile.icon}}</mat-icon>
         <button mat-button color="primary" (click)="goTo(tile.text)">{{tile.text}}</button>
     </mat-grid-tile>
 </mat-grid-list>
