--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -1,5 +1,5 @@
-<div style="display: block">
-    <canvas mdbChart
+<div *ngIf="chartDatasets" style="display: block">
+    <canvas
         [chartType]="chartType"
         [datasets]="chartDatasets"
         [labels]="chartLabels"
@@ -10,3 +10,20 @@
         (chartClick)="chartClicked($event)">
     </canvas>
   </div>
+
+  <!-- <ngx-charts-line-chart
+    [view]="[700,500]"
+    [scheme]="colorScheme"
+    [legend]="legend"
+    [showXAxisLabel]="showXAxisLabel"
+    [showYAxisLabel]="showYAxisLabel"
+    [xAxis]="xAxis"
+    [yAxis]="yAxis"
+    [xAxisLabel]="xAxisLabel"
+    [yAxisLabel]="yAxisLabel"
+    [timeline]="timeline"
+    [results]="multi"
+    (select)="onSelect($event)"
+    (activate)="onActivate($event)"
+    (deactivate)="onDeactivate($event)">
+</ngx-charts-line-chart> -->
