--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -1,6 +1,13 @@
 
-<div style="display: flex;justify-content: center;text-align: center;margin-top: 1rem;" *ngIf="!chartData" class="lds-circle"><div></div></div>
 
+<mat-form-field style="display: flex;justify-content: center;text-align: center;margin-top: 1rem;margin-bottom: 2rem;" appearance="fill">
+    <mat-label>Choose the cryptovalue to plot</mat-label>
+    <mat-select [(ngModel)]="filterOnCrypto">
+      <mat-option *ngFor="let c of allCryptos" [value]="c.acronym">{{c.name}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+<div style="display: flex;justify-content: center;text-align: center;margin-top: 1rem;" *ngIf="((filterOnCrypto.length!==0) && (!chartData))" class="lds-circle"><div></div></div>
 
 <div *ngIf="chartData" style="display: block">
     <canvas baseChart width="50%" height="20%"
