--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       <mat-icon style="color: rgb(0, 0, 223);">home</mat-icon>
       <span>Your cryptos</span>
     </button>
-    <button mat-menu-item>
+    <button [routerLink]="['/history']" mat-menu-item>
       <mat-icon style="color:rgb(0, 0, 223);">timeline</mat-icon>
       <span>History</span>
     </button>
